feat(relayer): implement meta-transaction model for gasless submissions
This commit introduces a meta-transaction relayer architecture to enable gasless transactions for users. This significantly improves the user experience by abstracting away the complexities of blockchain interactions, removing the need for users to have a funded wallet.

The core changes include:

- A relayer model where a centralized, pre-funded account submits transactions on behalf of users.
- Client-side "burner" wallets are now used solely for signing data fingerprints, not for sending transactions.
- The Cairo smart contract has been updated with a `store_fingerprint_relayed` function that verifies the user's signature and manages nonces to prevent replay attacks.
- The `@trustline/core` and `@trustline/hooks` packages have been refactored to support this new architecture, with updated methods for session management and transaction submission.
- The `demo` application is updated to reflect the new flow, now loading the contract ABI server-side and passing it to the client components.

BREAKING CHANGE: The APIs for `@trustline/core` and `@trustline/hooks` have been changed. The contract interface is updated, requiring new deployment. Configuration and environment variables for the demo application have also been modified.

--- a/apps/demo/.env.example
+++ b/apps/demo/.env.example
@@ -1,2 +1,5 @@
-NEXT_PUBLIC_CONTRACT_ADDRESS=
-NEXT_PUBLIC_RPC_URL=
+CONTRACT_ADDRESS=
+RPC_URL=
+RELAYER_ADDRESS=
+RELAYER_PRIVATE_KEY=
+SIERRA_FILE_PATH=
