chore: update .gitignore and remove obsolete contract files
This commit updates the .gitignore to include new Starknet build artifacts and sensitive account files. Additionally, it removes obsolete cached and contract JSON files from the target directory, streamlining the project structure.

--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,12 @@ yarn-error.log*
 
 # ui
 dist/
+
+# Starknet/Blockchain build artifacts
+packages/contracts/target/
+*.contract_class.json
+*.starknet_artifacts.json
+
+# Starknet account files (CRITICAL - contains private keys)
 packages/contracts/prefunded_account.json
 packages/contracts/prefunded_keystore.json
