--- a/packages/contracts/snfoundry.toml
+++ b/packages/contracts/snfoundry.toml
@@ -4,6 +4,9 @@
 [sncast.devnet]
 url = "http://127.0.0.1:5050/rpc"
 
+[sncast.default]
+account = "sepolia"
+
 # [sncast.default]                                         # Define a profile name
 # url = "https://starknet-sepolia.public.blastapi.io/rpc/v0_8" # Url of the RPC provider
 # accounts-file = "../account-file"                        # Path to the file with the account data
